# manim-mindmap

./: README.md  pyproject.toml
demo/: mind_map.py  mind_map_layout.py  mind_map_node.py  standard_map.py  standard_map_node.py  time_line.py  time_line_layout.py  time_line_node.py
src/manim_mindmap/: __init__.py
src/manim_mindmap/algorithms/: __init__.py  alg_catalog.py  alg_standard.py  layout.py  layout_config.py  layout_factory.py  standard_mindmap.py  tidy_tree.py  time_line.py
src/manim_mindmap/animations/: animations.py
src/manim_mindmap/mindmap/: __init__.py  base.py  layout.py  mindmap.py
src/manim_mindmap/nodes/: node.py
